--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
+    <script src="https://kit.fontawesome.com/566d64e479.js" crossorigin="anonymous"></script>
+
 
   <title>My Todo List App</title>
 </head>
@@ -27,7 +29,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
-  -->
+
 </body>
 
 </html>
